Fix unexpected zoom on mobile

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
 }
 
 button {
+    touch-action: manipulation;
     border: 1px solid black;    
     padding: 20px;
     font-size: 20px;
